--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <li><a href="#">Services</a></li>
             <li><a href="#">ContactUs</a></li>
         </ul>
-        <a href="#">SignUp</a>
+        <a class="sign-up" href="#">SignUp</a>
     </nav>
     <section class="hero">
         <div class="hero-content">
